// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render a standard block link 1`] = `
<a
  className="StyledLink-nhmg8j-0 dHbSzF"
  href="https://www.bbc.com/"
>
  <span
    className="StyleLinkText-nhmg8j-1 fNLpPr"
  >
    Some link text
  </span>
</a>
`;

exports[`Link should render an inline link after passing an inline prop 1`] = `
<a
  className="StyledLink-nhmg8j-0 jHQlUp"
  href="https://www.bbc.com/"
>
  <span
    className="StyleLinkText-nhmg8j-1 fNLpPr"
  >
    Some link text
  </span>
</a>
`;
